--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -16,7 +16,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".modules.recipe.RecipeActivity"></activity>
+        <activity android:name=".modules.recipe.RecipeActivity" />
     </application>
-
 </manifest>
