Adding basic navigation to Step Activity from Recipe description

--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -19,5 +19,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".modules.recipe.RecipeActivity" />
+        <activity android:name=".modules.step.StepActivity" />
     </application>
 </manifest>
