--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -33,6 +33,11 @@
 
         <service android:name=".modules.widgets.RecipeWidgetService" />
 
+        <provider
+            android:name=".integration.contentProvider.RecipeWidgetContentProvider"
+            android:authorities="com.pedrolopesme.android.bakingapp.provider"
+            android:exported="true"
+            android:permission="com.pedrolopesme.android.bakingapp.provider.READ_WRITE" />
     </application>
 
 </manifest>
