Integrating widget, content provider and sqlite db. Ålso, adding a button to recipe fragment allowing to user select a recipe to show in the widget.

--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         <service android:name=".modules.widgets.RecipeWidgetService" />
 
         <provider
-            android:name=".integration.contentProvider.RecipeWidgetContentProvider"
+            android:name=".integration.contentProvider.recipeWidget.RecipeWidgetContentProvider"
             android:authorities="com.pedrolopesme.android.bakingapp.provider"
             android:exported="true"
             android:permission="com.pedrolopesme.android.bakingapp.provider.READ_WRITE" />
