--- a/src/app/build.gradle
+++ b/src/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.devbrackets.android:exomedia:4.0.0'
+    compile 'com.google.android.exoplayer:exoplayer:r2.0.4'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 }
